<?xml version="1.0" encoding="UTF-8"?>
<!-- окно с подробной информацией о персонажах -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation = "vertical"
    android:background = "@color/mainBackground"
    tools:context=".CurrentData" >
    
     <TextView
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:text = "@string/currentDisplayText"
        android:textSize = "@dimen/_18ssp"
        android:textColor = "@color/textColor"
        android:background = "@color/currentTextBackground"
        android:gravity = "center"
        android:layout_gravity = "center"
        android:padding = "@dimen/_5sdp"
        android:layout_weight = "0"/>
    
     <!-- фрагмент -->
    <fragment 
        android:name = "com.example.myapplication_superhero.fragments.CurrentFragment"
        android:layout_width = "match_parent"
        android:layout_height = "match_parent"
        android:id = "@+id/currentFragment"
        android:layout_weight = "1"
        android:layout_marginTop = "@dimen/_10sdp"
        tools:layout = "@layout/current_fragment"
        android:layout_marginBottom = "@dimen/_10sdp"/>
    
    <!-- кнопки -->
    <LinearLayout
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:layout_weight = "0"
        android:orientation = "horizontal"
        android:layout_gravity = "center"
        android:gravity = "center"
        android:padding = "@dimen/_5sdp"
        android:layout_marginBottom = "@dimen/_10sdp">
                
        <Button
            android:id = "@+id/buttonUpdate"
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:text = "@string/buttonUpdateText"
            android:textSize = "@dimen/_15ssp"
            android:textColor = "@color/textColor"
            android:background = "@color/buttonUpdate"
            android:gravity = "center"
            android:layout_gravity = "center"
            android:padding = "@dimen/_10sdp"/>
                
         <Button
            android:id = "@+id/buttonDelete"
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:text = "@string/buttonDeleteText"
            android:textSize = "@dimen/_15ssp"
            android:textColor = "@color/textColor"
            android:background = "@color/buttonDelete"
            android:gravity = "center"
            android:layout_gravity = "center"
            android:padding = "@dimen/_10sdp"
            android:layout_marginLeft = "@dimen/_10sdp"/>
                
         <Button
            android:id = "@+id/buttonBack"
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:text = "@string/buttonBackText"
            android:textSize = "@dimen/_15ssp"
            android:textColor = "@color/textColor"
            android:background = "@color/buttonBack"
            android:gravity = "center"
            android:layout_gravity = "center"
            android:padding = "@dimen/_10sdp"
            android:layout_marginLeft = "@dimen/_10sdp"/>
                
   </LinearLayout>
    
</LinearLayout>